<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bVerEnGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:paddingVertical="12dp"
            android:text="@string/verEnGitHub"
            android:textColor="@android:color/black" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/CopyrightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:text="@string/creditos" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20px"
            android:layout_marginTop="20px"
            android:background="@color/teal_700" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/DescripcionGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/descripcion" />

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Agradecimientos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/agradecimientos" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>