<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/bAddAñadirMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/TextoGuardarMedicina"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="408dp"
        android:layout_height="487dp"
        android:fadeScrollbars="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addNombreMedicacion"
                android:textColorHint="@color/teal_200"
                android:theme="@style/Theme.EditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_200"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bAddProgramarDosis"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:text="@string/addProgramarDosis"
                    android:textColor="@color/teal_200"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/lbHoraAddMedicacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/hora"
                    android:textAlignment="gravity"
                    android:textColor="@color/teal_700"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bAddFechaMedicacion"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:text="@string/addProgramarFecha"
                    android:textColor="@color/teal_200"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/lbFechaMedicacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/fecha"
                    android:textAlignment="gravity"
                    android:textColor="@color/teal_700"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/schedule_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/take_with_food_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingHorizontal="10dp"
                android:paddingTop="15dp"
                android:text="@string/take_with_food"
                android:textColor="@color/teal_200"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dose_amount"
                android:paddingTop="10dp"
                android:textColorHint="@color/teal_200"
                android:theme="@style/Theme.EditText">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:minLines="1"
                    android:textColor="@color/purple_200"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addDescripcionMedicina"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textColorHint="@color/teal_200"
                android:theme="@style/Theme.EditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:minLines="4"
                    android:textColor="@color/purple_200"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>