<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity">

    <LinearLayout
        android:id="@+id/linearLayoutAuth"
        android:layout_width="331dp"
        android:layout_height="281dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbLoginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etLoginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="pills@remember.com"
            android:inputType="textEmailAddress"
            android:minHeight="60dp" />

        <TextView
            android:id="@+id/lbRegisterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/Contraseña"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etLoginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="******"
            android:inputType="textPassword"
            android:minHeight="60dp" />

        <Button
            android:id="@+id/bRememberPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/RecuperarContraseña"

            android:textAlignment="textEnd"
            android:textColor="@color/teal_700" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/Registrarse2"
        android:src="@drawable/ic_add"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyLoginButtons"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="35dp"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/lyLoginButtons"
        android:layout_width="350dp"
        android:layout_height="196dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAuth">

        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/Login"
            android:textSize="30sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bLoginGoogle"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:paddingVertical="15dp"
            android:text="@string/LoginGoogle"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:visibility="visible"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconGravity="textStart"
            app:iconTint="#046A69"
            app:strokeColor="@color/teal_700" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>