<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dsbelda.proyectodam.activities.AuthActivity">

    <Button
        android:id="@+id/bRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Registrarse2"
        android:textSize="30dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRegister"
        app:layout_constraintVertical_bias="0.375" />

    <LinearLayout
        android:id="@+id/linearLayoutRegister"
        android:layout_width="316dp"
        android:layout_height="349dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbRegisterMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/Email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etRegisterMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="pills@remember.com"
            android:inputType="textEmailAddress"
            android:minHeight="60dp" />

        <TextView
            android:id="@+id/lbRegisterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/Contraseña"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etRegisterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="******"
            android:inputType="textPassword"
            android:minHeight="60dp" />

        <TextView
            android:id="@+id/lbRepetirContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/RepetirContraseña"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etRegisterPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="******"
            android:inputType="textPassword"
            android:minHeight="60dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>