<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="369dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/etNombreMedicinaDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre Medicina"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="389dp"
            android:layout_height="1dp"
            android:layout_marginStart="20px"
            android:layout_marginTop="20px"
            android:layout_marginBottom="10sp"
            android:background="@color/teal_700" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextoFijoMedicinaDetalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_weight="1"
                android:text="@string/textoSiguienteDosis"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/etHoraDosisMedicinaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="12:00"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bTomarDosisMedicinaDetalle"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="50sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="14sp"
            android:text="@string/AcaboDeTomarla"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/swRecordatorioActivoMedicinaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="35sp"
            android:layout_marginBottom="5sp"
            android:text="@string/textoMedicacionDetalleActivo"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/swNotificacionesActivasMedicinaDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="35sp"
            android:layout_marginBottom="5sp"
            android:text="@string/textoNotificacionesActivasMedicinaDetalle"
            android:textSize="17sp" />

        <View
            android:layout_width="389dp"
            android:layout_height="1dp"
            android:layout_marginStart="20px"
            android:layout_marginTop="20px"
            android:layout_marginBottom="10sp"
            android:background="@color/teal_700" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:text="@string/cantidadMedicinaDetalle" />

            <TextView
                android:id="@+id/etCantidadMedicinaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:text="20 mg"
                android:textColor="@color/teal_700"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:text="@string/dosisRestantesMedicinaDetalle" />

            <TextView
                android:id="@+id/etDosisRestanteMedicinaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:text="2 pastillas"
                android:textColor="@color/teal_700"
                android:textSize="17sp"

                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:text="@string/descripcionMedicinaDetalle" />

            <TextView
                android:id="@+id/etDescripcionMedicinaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:text="Descripcion Medicina"
                android:textColor="@color/teal_700"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bEliminarMedicinaDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/eliminarMedicinaDetalle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>